--- a/OrchestratorService/Dockerfile
+++ b/OrchestratorService/Dockerfile
@@ -3,16 +3,15 @@ FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-WORKDIR /src
 COPY ["OrchestratorService/OrchestratorService.csproj", "OrchestratorService/"]
 COPY ["SharedLib/SharedLib.csproj", "SharedLib/"]
 RUN dotnet restore "OrchestratorService/OrchestratorService.csproj"
-COPY . .
-WORKDIR "/src/OrchestratorService"
-RUN dotnet build "OrchestratorService.csproj" -c Release -o /app/build
+COPY ["OrchestratorService/", "OrchestratorService/"]
+COPY ["SharedLib/", "SharedLib/"]
+RUN dotnet build "OrchestratorService/OrchestratorService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "OrchestratorService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "OrchestratorService/OrchestratorService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
